--- a/FTP高阶/my_ftp_server/config/setting.ini
+++ b/FTP高阶/my_ftp_server/config/setting.ini
@@ -1,3 +1,11 @@
 [DEFAULT]
 ftp_dir = G:\ftp\home
 default_size = 10M
+status_code = {
+              '200': ''ok,
+              '403': 'forbidden',
+              '500': 'space not enough',
+              '600': 'md5 not match',
+              '700': 'directory not exist',
+              '800': 'file not exist
+              }
