主机管理完成

--- a/day9-主机管理/conf/setting.ini
+++ b/day9-主机管理/conf/setting.ini
@@ -5,28 +5,11 @@ log_level = DEBUG
 log_path = logs
 
 [GROUPS]
-group_test1 = {
-          'host1':{
-            'ip':'172.16.200.143',
-            'password': '111111',
-            'port': '22'
-          },
-          'host2':{
-            'ip':'172.16.200.160',
-            'password': '111111',
-            'port': '22'
-          }
-    }
+# ('name', 'ip', 'ssh_port', 'username', 'password')
+group_test1 = [
+    ('host1', '172.16.200.143', 22, 'root', '111111'), ('host2', '172.16.200.160', 22, 'root', 'hztxt@888')
+    ]
 
-group_test2 = {
-          'host1':{
-            'ip':'172.16.220.50',
-            'password': '111111',
-            'port': '22'
-          },
-          'host2':{
-            'ip':'172.16.220.150',
-            'password': '111111',
-            'port': '22'
-          }
-    }
+group_test2 = [
+    ('host1', '172.16.220.50', 22, 'root', '123456'), ('host2', '172.16.220.150', 22, 'root', '123456')
+    ]
